# graphbit

./: .cz.toml  .gitattributes  .gitignore  .hadolint.yaml  .markdownlint.yaml  .mypy.ini  .pre-commit-config.yaml  .secrets.baseline  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  Makefile  README.md  SECURITY.md  clippy.toml  environment.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  rustfmt.toml  tarpaulin.toml  test-astra-db.py  vercel.json
.github/: workflow-config.yml.disabled  workflow-state.json
.github/ci/: rust.yml
.github/workflows/: 01-validation.yml.disabled  02-testing.yml.disabled  03-build.yml.disabled  04-release.yml.disabled  05-deployment.yml.disabled  build-matrix.yml  ci.yml.backup.disabled  pipeline-orchestrator.yml,disabled  python-integration-tests.yml  release.yml.backup.disabled  sync-docs-to-target.yml  update-contributors.yml  update-docs.yml
benchmarks/: .dockerignore  .gitignore  AI Framework Benchmark Comparison Report.md  Dockerfile  README.md  docker-compose.yml  run_benchmark.py
benchmarks/Report/: Ai_LLM_Multi_Agent_Framework_Benchmark_Comparison_Report.md
benchmarks/frameworks/: __init__.py  common.py  crewai_benchmark.py  graphbit_benchmark.py  langchain_benchmark.py  langgraph_benchmark.py  llamaindex_benchmark.py  pydantic_ai_benchmark.py
benchmarks/report/: framework-benchmark-report.md
core/: Cargo.toml  README.md
core/src/: agents.rs  document_loader.rs  dynamic_graph.rs  embeddings.rs  errors.rs  graph.rs  lib.rs  text_splitter.rs  types.rs  validation.rs  workflow.rs  workflow_tests.rs
core/src/llm/: anthropic.rs  deepseek.rs  fireworks.rs  huggingface.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  perplexity.rs  providers.rs  response.rs
docs/: 00-installation-setup.md  01-getting-started-workflows.md  02-use-case-examples.md  03-local-llm-integration.md  04-document-processing-guide.md  05-complete-api-reference.md  06-api-quick-reference.md  07-embeddings-guide.md  08-huggingface-integration.md  09-technical-architecture.md  CHANGELOG.md  CONTRIBUTING.md  README.md  about.md  index.md  python-api-summary.md
docs/api-reference/: configuration.md  node-types.md  python-api.md
docs/connector/: astradb_integration.md  aws_boto3.md  azure.md  chromadb_integration.md  db2.md  elasticsearch_integration.md  faiss_integration.md  google_cloud_platform.md  google_search_api.md  mariadb_integration.md  milvus_integration.md  mongodb.md  pgvector.md  pinecone_integration.md  qdrant_integration.md  weaviate_integration.md
docs/development/: architecture.md  contributing.md  debugging.md  python-bindings.md
docs/examples/: comprehensive-pipeline.md  content-generation.md  data-processing.md  llm-integration.md  semantic-search.md
docs/getting-started/: dependency-installation.md  examples.md  installation.md  quickstart.md
docs/javascripts/: github-stats.js  header-scroll.js
docs/stylesheets/: # Code Citations.md  extra.css
docs/user-guide/: agents.md  async-vs-sync.md  concepts.md  document-loader.md  document-loading.md  dynamics-graph.md  embeddings.md  llm-providers.md  memory-management.md  monitoring.md  performance.md  reliability.md  text-splitters.md  tool-calling.md  validation.md  workflow-builder.md
examples/: README.md  azure.py
examples/browser-automation-agent/: llm_graphbit_browser_agent.py  plan_executor.py  pyproject.toml
examples/chatbot/: README.md  pyproject.toml
examples/chatbot/backend/: chatbot_manager.py  const.py  llm_manager.py  main.py  vectordb_manager.py
examples/chatbot/frontend/: chatbot.py
examples/graphbit_agent_tasks_other_orchastrations/: example_A_run_simple_task_mistral_Vs.py  example_B_run_sequential_pipeline_mistral_v2_Vs.py  example_C_run_complex_workflow_mistral_Vs.py  example_D_run_memory_intensive_mistral_Vs.py  example_E_run_concurrent_tasks_mistral_Vs.py  example_F_run_high_performance_concurrent_tasks_mistral_Vs.py
examples/llm-guided-browser-automation-agent-graphbit-playwright/: graphbit_agent_planner.py
examples/tasks_examples/: complex_workflow_local_model.py  memory_task_local_model.py  pinecone_integration.py  sequential_task_local_model.py  simple_task_local_model.py  simple_task_openrouter.py  simple_task_perplexity.py
nodejs/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
nodejs/src/: document_loader.rs  errors.rs  lib.rs  runtime.rs  text_splitter.rs  validation.rs
nodejs/src/embeddings/: client.rs  config.rs  mod.rs
nodejs/src/llm/: client.rs  config.rs  mod.rs
nodejs/src/workflow/: context.rs  executor.rs  mod.rs  node.rs  result.rs  workflow.rs
python/: Cargo.toml  README.md  pyproject.toml
python/src/: document_loader.rs  errors.rs  lib.rs  runtime.rs  validation.rs
python/src/embeddings/: client.rs  config.rs  mod.rs
python/src/llm/: client.rs  config.rs  mod.rs
python/src/text_splitter/: config.rs  mod.rs  splitter.rs
python/src/tools/: decorator.rs  executor.rs  mod.rs  registry.rs  result.rs
python/src/workflow/: context.rs  executor.rs  mod.rs  node.rs  result.rs  workflow.rs
scripts/: branch-config.json  build-runner.py  deployment-readiness-checker.py  generate-changelog.py  legacy-migrator.py  test-suite-runner.py  testing-runner.py  validate-setup.sh  validation-runner.py  verify-version-sync.py  workflow-orchestrator.py  workflow-validator.py
site/: .typos.toml  404.html  index.html
site/search/: search_index.json
src/: lib.rs  main.rs
src/cli/: args.rs  config.rs  mod.rs  project.rs  utils.rs  workflow.rs
tests/: main.rs
tests/integration_tests/: cli_tests.rs  error_handling_tests.rs  file_io_tests.rs  mod.rs  workflow_tests.rs
tests/python_integration_tests/: README.md  __init__.py  test_runner.py  tests_async_execution.py  tests_complex_workflow.py  tests_document_loader.py  tests_dynamic_workflow.py  tests_embeddings.py  tests_error_handling.py  tests_executor.py  tests_executor_async.py  tests_executor_batch.py  tests_llm.py  tests_performance_monitoring.py  tests_runtime_configuration.py  tests_validation.py  (+6 more)
(+95 files in other folders)
