[dependencies]
anyhow = "1.0"
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "4.5", features = ["derive"]}  # CLI-specific dependencies
futures = "0.3"
graphbit-core = {path = "core", features = ["python"]}
num_cpus = "1.16"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tempfile = "3.10.0"
tokio = {version = "1.38", features = ["full"]}

[features]
cli = []
default = []

[package]
authors = ["GraphBit Team"]
description = "Command-line interface for GraphBit agentic workflow automation"
edition = "2021"
name = "graphbit"
publish = false
repository = "https://github.com/InfinitiBit/graphbit"
version = "0.1.0"

[target.'cfg(unix)'.dependencies]
jemallocator = "0.5"
