[dependencies]
anyhow = "1.0"
chrono = {version = "0.4", features = ["serde"]}
futures = "0.3"
graphbit-core = {path = "core", features = ["python"]}
num_cpus = "1.16"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tempfile = "3.10.0"
tokio = {version = "1.38", features = ["full"]}
async-trait = "0.1.88"

[dev-dependencies]
async-trait = "0.1.88"
pyo3 = {version = "0.24", features = ["auto-initialize"]}

[features]
default = []

[package]
authors = ["GraphBit Team"]
description = "GraphBit agentic workflow automation framework (library)"
edition = "2021"
name = "graphbit"
publish = false
repository = "https://github.com/InfinitiBit/graphbit"
version = "0.1.0"

[target.'cfg(unix)'.dependencies]
jemallocator = "0.5"
