[dependencies]
pyo3 = {workspace = true, optional = true}
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
docx-rs.workspace = true
futures.workspace = true
lazy_static.workspace = true
lopdf.workspace = true
petgraph.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[features]
default = []
python = ["pyo3"]

[lints]
workspace = true

[package]
description = "Core engine for GraphBit agentic workflow automation"
name = "graphbit-core"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[target.'cfg(unix)'.dependencies]
jemallocator.workspace = true
