[build-dependencies]
napi-build.workspace = true

[dependencies]
chrono.workspace = true
futures.workspace = true
graphbit-core.workspace = true
napi.workspace = true
napi-derive.workspace = true
num_cpus.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
# System information and monitoring
sys-info.workspace = true
tokio.workspace = true
# Production-grade logging and tracing
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
# Production features
production = ["tracing-subscriber/json"]
# Performance profiling features
profiling = ["tracing-subscriber/env-filter"]

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[package]
description = "Production-grade TypeScript/JavaScript bindings for GraphBit agentic workflow automation"
name = "graphbit-nodejs"
publish = false
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
