[dependencies]
chrono = {version = "0.4", features = ["serde"]}
futures = "0.3"
graphbit-core = {path = "../core", features = ["python"]}
num_cpus = "1.16"
pyo3 = {version = "0.24.1", features = ["extension-module"]}
pyo3-async-runtimes = {version = "0.24", features = ["tokio-runtime"]}
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.38", features = ["full"]}

[features]
cli = []
default = []

[lib]
crate-type = ["cdylib"]

[package]
authors = ["GraphBit Team"]
description = "Python bindings for GraphBit agentic workflow automation"
edition = "2021"
name = "graphbit"
publish = false
repository = "https://github.com/InfinitiBit/graphbit"
version = "0.1.0"

[target.'cfg(unix)'.dependencies]
jemallocator = "0.5"