[dependencies]
chrono = {version = "0.4", features = ["serde"]}
futures = "0.3"
graphbit-core = {path = "../core", features = ["python"]}
num_cpus = "1.16"
pyo3 = {version = "0.24.1", features = ["extension-module"]}
pyo3-async-runtimes = {version = "0.24", features = ["tokio-runtime"]}
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.38", features = ["full"]}

# Production-grade logging and tracing
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "json"]}

# System information and monitoring
sys-info = "0.9"

[features]
cli = []
default = []
# Production features
production = ["tracing-subscriber/json"]
# Performance profiling features  
profiling = ["tracing-subscriber/env-filter"]

[lib]
crate-type = ["cdylib"]

[package]
authors = ["GraphBit Team"]
description = "Production-grade Python bindings for GraphBit agentic workflow automation"
edition = "2021"
name = "graphbit"
publish = false
repository = "https://github.com/InfinitiBit/graphbit"
version = "0.1.0"

# Performance optimizations for release builds
[profile.release]
debug = false
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1
strip = true

# Optimized debug builds for development
[profile.dev]
debug = true
opt-level = 1

[target.'cfg(unix)'.dependencies]
jemallocator = "0.5"
