[dependencies]
graphbit-core = {workspace = true, features = ["python"]}
uuid = {workspace = true, features = ["v4"]}
chrono.workspace = true
futures.workspace = true
num_cpus.workspace = true
pyo3.workspace = true
pyo3-async-runtimes.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
# System information and monitoring
sys-info.workspace = true
tokio.workspace = true
# Production-grade logging and tracing
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
cli = []
default = []
# Production features
production = ["tracing-subscriber/json"]
# Performance profiling features
profiling = ["tracing-subscriber/env-filter"]

[lib]
crate-type = ["cdylib"]
name = "graphbit"

[lints]
workspace = true

[package]
description = "Production-grade Python bindings for GraphBit agentic workflow automation"
name = "graphbit-python"
publish = false
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[target.'cfg(unix)'.dependencies]
jemallocator.workspace = true
