[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["GraphBit"]
description = "LLM-driven browser automation agent using Graphbit (PyO3 bindings), OpenAI GPT, and Playwright"
name = "graphbit-llm-browser-agent"
packages = [{include = "*"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
openai = "^1.0.0"
playwright = "^1.41.0"
python = "^3.8"
